# glassrail

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE1_REMAINING.md  README.md  agent_server.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish.yml
clients/tui/: Cargo.toml  HANDOFF.md  README.md  TUI_REDESIGN_SPEC.md
clients/tui/examples/: fake_agent.rs
clients/tui/src/: app.rs  graph.rs  main.rs  transcript.rs  ui.rs
clients/tui/src/acp/: client.rs  messages.rs  mod.rs
deploy/k8s/: dagagent-deployment.yaml  glassrail-deployment.yaml  mlx-daemonset.yaml  mlx-service.yaml
deploy/searxng/: .gitignore  README.md  docker-compose.yml
deploy/searxng/searxng/: settings.yml.example
docs/: architecture.md  deployment.md  evals.md  index.md  naming.md  observability.md  roadmap.md  streaming.md  tui.md
docs/release/: grassroots-marketing.md  pre-release-hygiene.md  product-website.md  pypi-release.md
docs/specs/: comparative-baselines.md  eval-integrity.md  index.md  node-resilience.md  parallel-execution.md  routing-table.md  security-baseline.md  serving-hardening.md  small-fixes.md
eval-framework/: .gitignore  CLAUDE.md  DECISIONS.md  HARNESS_NODE_EVAL_SPEC.md  README.md  run.py
eval-framework/evalkit/: __init__.py  claude.py  config.py  judge.py  loader.py  models.py  ratchet.py  reporter.py  runner.py  stats.py
eval-framework/evalkit/graders/: __init__.py  deterministic.py  llm.py  trajectory.py
eval-framework/evalkit/subjects/: __init__.py  base.py  claude_cli.py  dagagent_cli.py  dagagent_exec_plan.py  dagagent_gateway.py  glassrail_cli.py  glassrail_exec_plan.py  glassrail_gateway.py  openai_compat.py  react_loop.py
eval-framework/suites/baseline-raw/: README.md  suite.toml
eval-framework/suites/baseline-react/: README.md  suite.toml
eval-framework/suites/dagagent/: EVAL_PLAN.md  suite.toml
eval-framework/suites/dagagent-openrouter/: suite.toml  tasks
eval-framework/suites/example/: suite.toml
eval-framework/suites/glassrail/: EVAL_PLAN.md  suite.toml
eval-framework/suites/glassrail-heldout/: README.md  suite.toml
eval-framework/suites/glassrail-openrouter/: suite.toml  tasks
eval-framework/suites/harness-mechanics/: suite.toml
eval-framework/suites/node-capability/: suite.toml
eval-framework/suites/node-capability-openrouter/: suite.toml  tasks
eval-framework/tests/: test_infrastructure_integrity.py
ops/mlx/: com.dagagent.mlx-server.plist  com.dagagent.mlx-subagent.plist  com.dagagent.mlx-watchdog.plist  com.glassrail.mlx-server.plist  com.glassrail.mlx-subagent.plist  com.glassrail.mlx-watchdog.plist  memory_watchdog.sh
scripts/: acp_smoke.py  name_check.py
src/dagagent/: __init__.py  runtime.py
src/dagagent/channels/: __init__.py
src/dagagent/cli/: __init__.py
src/dagagent/config/: __init__.py  prompts.py  settings.py
src/dagagent/core/: __init__.py  errors.py  execution.py  plan.py
src/dagagent/events/: __init__.py  bus.py  types.py
src/dagagent/executor/: __init__.py  context.py  executor.py  orchestrator.py  tool_approval.py
src/dagagent/gateways/: __init__.py
src/dagagent/gateways/acp/: __init__.py  mapping.py  protocol.py  server.py  session.py
src/dagagent/gateways/rest/: __init__.py  app.py
src/dagagent/gateways/tui/: __init__.py  app.py  client.py  dag.py  view.py
src/dagagent/harness/: __init__.py  builtin.py  registry.py
src/dagagent/harness/integrations/: __init__.py  image.py  web.py
src/dagagent/planner/: __init__.py  cookbook.py  planner.py  tool_digest.py
src/dagagent/planner/cookbooks/: compare_aggregate.json  conditional_branch.json  single_tool.json  subplan.json  web_research.json
src/dagagent/providers/: __init__.py  base.py  factory.py  openai_compat.py  router.py  scripted.py
src/dagagent/state/: __init__.py  base.py  memory.py  sqlite.py
src/dagagent/telemetry/: __init__.py  tracing.py
src/dagagent/validator/: __init__.py  validator.py
src/glassrail/: __init__.py  runtime.py
src/glassrail/cli/: __init__.py
src/glassrail/config/: __init__.py  prompts.py  settings.py
src/glassrail/core/: __init__.py  errors.py  execution.py  ids.py  plan.py
src/glassrail/events/: __init__.py  bus.py  types.py
src/glassrail/executor/: __init__.py  context.py  executor.py  orchestrator.py  tool_approval.py
src/glassrail/gateways/acp/: __init__.py  mapping.py  protocol.py  server.py  session.py
src/glassrail/gateways/rest/: __init__.py  app.py
src/glassrail/harness/: __init__.py  builtin.py  pathguard.py  registry.py
src/glassrail/planner/: __init__.py  cookbook.py  planner.py  tool_digest.py
src/glassrail/providers/: __init__.py  base.py  factory.py  openai_compat.py  postprocess.py  router.py  scripted.py
src/glassrail/state/: __init__.py  base.py  memory.py  sqlite.py
src/glassrail/telemetry/: __init__.py  tracing.py
src/glassrail/validator/: __init__.py  validator.py
tests/: conftest.py
tests/contract/: test_state_store.py
tests/eval/: conftest.py  harness.py  scenarios.py  test_eval_suite.py  test_harness.py
tests/integration/: test_acp_adapter.py  test_orchestrator.py  test_orchestrator_events.py  test_rest_events.py  test_rest_gateway.py  test_rest_ws_events.py  test_telemetry.py  test_tui_client.py  test_upstream_context.py
tests/property/: test_fresh_context.py
tests/unit/: test_cli.py  test_config_prompts.py  test_config_settings.py  test_core_execution.py  test_core_plan.py  test_events_bus.py  test_executor.py  test_executor_context.py  test_harness_registry.py  test_image_tool.py  test_pathguard.py  test_planner.py  test_planner_cookbook.py  test_planner_tool_digest.py  test_providers_base.py  test_providers_factory.py  test_providers_openai_compat.py  test_providers_postprocess.py  test_providers_router.py  test_providers_scripted.py  test_runtime.py  test_telemetry.py  test_tui_dag.py  test_tui_view.py  test_validator.py  test_version.py  test_web_tools.py
(+244 files in other folders)
