[project]
name = "dagagent"
version = "0.1.0"
description = "A DAG-planning agent with deterministic tier routing, fresh context per node, and plan-as-document semantics."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Andrew Ellis", email = "andrew.ellis.engineering@gmail.com" }]
keywords = ["agent", "llm", "dag", "planning", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "structlog>=24.1",
    "typer>=0.12",
    "python-ulid>=2.7",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20"]

[project.scripts]
dagagent = "dagagent.cli:app"

[project.urls]
Homepage = "https://github.com/andrewellis/dagagent"
Repository = "https://github.com/andrewellis/dagagent"
Documentation = "https://github.com/andrewellis/dagagent"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pyright>=1.1.370",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagagent"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [
    # Legacy prototype, being ported into src/dagagent/ module by module.
    # Will be removed once the port is complete.
    "agent_server.py",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "ASYNC",         # async best practices
    "TID",           # tidy imports
    "PL",            # pylint subset
]
ignore = [
    "PLR0913",       # too many arguments — common in agent configs
    "PLR2004",       # magic value comparisons — fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
# Pydantic Field(default_factory=...) returns Any from the stubs, which makes
# every list/dict-defaulted model field look "partially unknown" even though
# our annotation states the exact type. Silencing this rule keeps the signal
# on real cases (unannotated variables, untyped helper returns) without the
# noise from every Pydantic model we write.
reportUnknownVariableType = "none"
reportUnknownArgumentType = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated tests",
    "integration: tests touching multiple components",
    "contract: shared test suites every plugin impl must pass",
    "property: hypothesis-driven invariant tests",
    "eval: eval harness tests (may hit external services)",
    "slow: tests over 1s",
]

[tool.coverage.run]
source = ["src/dagagent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
